# rustos

./: .gitmodules  Cargo.toml  Makefile
kernel/: .gitignore  Cargo.toml  Makefile  build.rs
kernel/.cargo/: config.toml
kernel/src/: batch.rs  config.rs  console.rs  entry.asm  lang_items.rs  link_app.S  linker.ld  loader.rs  main.rs  sbi.rs  timer.rs
kernel/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_tables.rs
kernel/src/sync/: up.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs
kernel/src/task/: mod.rs  switch.rs  task.rs
kernel/src/trap/: context.rs  mod.rs  trap.S
scripts/: install.sh
src/: lang_items.rs  main.rs
user/: Cargo.toml  Makefile  build.rs
user/.cargo/: config.toml
user/src/: console.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
