[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yi Qingliang <niqingliang2003@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.8.0"
bitflags = "1.3.2"
riscv = { path = "../riscv", features = ["inline-asm"] }

[profile.release]
debug = true
